refactor&fix:gen swagger docs on docker build
