# internal/todo/api/todo.handler.go
@@ -4,6 +4,7 @@ import (
 	"encoding/json"
 	"net/http"
 
+	"github.com/go-chi/chi/v5"
 	"github.com/kostjaog/go-to-do/internal/todo/model"
 	"github.com/kostjaog/go-to-do/internal/todo/repository"
 )
@@ -55,5 +56,33 @@ func (h *Handler) CreateTodo(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, "Не удалось создать задачу", http.StatusInternalServerError)
 		return
 	}
+	json.NewEncoder(w).Encode(todo)
+}
+
+// GetTodoByID godoc
+// @Summary Получить задачу по ID
+// @Description Возвращает задачу с указанным ID
+// @Tags todos
+// @Accept  json
+// @Produce  json
+// @Param id path string true "ID задачи"
+// @Success 200 {object} model.Todo
+// @Failure 404 {string} string "Задача не найдена"
+// @Failure 500 {string} string "Ошибка при получении задачи"
+// @Router /todos/{id} [get]
+func (h *Handler) GetTodoByID(w http.ResponseWriter, r *http.Request) {
+	id := chi.URLParam(r, "id")
+
+	if id == "" {
+		http.Error(w, "Не указан ID задачи", http.StatusBadRequest)
+		return
+	}
+
+	todo, err := h.todoRepo.FindOne(id)
+	if err != nil {
+		http.Error(w, "Задача не найдена", http.StatusNotFound)
+		return
+	}
+
 	json.NewEncoder(w).Encode(todo)
 }
